# quantum_measurement_reduction

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  INSTALLATION_GUIDE.md  Makefile  README.md  __init__.py  debug_bliss_norm.py  ghost_pauli_example.py  pyproject.toml  requirements.txt  setup.py  test_bliss.py  test_dual_killer_bliss.py  test_molecular_bliss.py  test_molecular_bliss_two_body.py  test_qubit_bliss.py  test_qubit_bliss_pauli_norm.py  verify_installation.py
.github/workflows/: ci.yml
SymplecticVectorSpace/: __init__.py
bliss/: __init__.py  bliss_main.py
bliss/adaptive_killer_search/: adaptive_killer_operation.py
bliss/arrays_construction/: tensor_fermion_operator.py
bliss/filtering/: one_body_unitary_filter.py
bliss/generator_based_bliss/: commutation_check.py  generator_based_bliss.py  generator_based_bliss_optimization.py  generator_based_filtering.py  killer_selection_u_based.py
bliss/hf_bliss/: iterative_BLISS_optimization.py  iterative_bliss.py  iterative_filter.py
bliss/majorana/: custom_Majorana_operator.py  custom_majorana_transform.py
bliss/normal_bliss/: bliss_efficiency.py  bliss_package.py  complete_bliss.py  customized_bliss_package.py  customized_one_norm_func.py  indices_filter.py  one_norm_func_gen.py
bliss/qubit_bliss/: __init__.py  example_usage.py  hartree_fock_killer_bliss.py  killer_operator_bliss.py  qubit_bliss_dual_killer.py  qubit_bliss_main.py  test_killer_operator.py
entities/: __init__.py  paulis.py
ghost_pauli/: __init__.py  utils_ghost_pauli.py  utils_ghost_pauli_sparse.py
ham_lib/: data_generator.py
quantum_measurement_reduction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared_pauli/: __init__.py  coefficient_optimizer.py  shared_pauli_package.py  shared_paulis.py  utils_shared_pauli_sparse.py
state_perparation/: hartree_fock.py  parametrized_state.py  reference_state_utils.py
symplectic_vector_space/: __init__.py  space_F_definition.py
tapering/: __init__.py
tests/: README.md  __init__.py  ghost_pauli_example.py  test_basic.py
tests/bliss_tests/: __init__.py  debug_bliss_norm.py  realistic_killer_test.py  simple_hf_killer_test.py  test_dual_killer_bliss.py  test_hf_killer.py  test_killer_operator.py  test_molecular_bliss.py  test_molecular_bliss_two_body.py  test_qubit_bliss.py  test_qubit_bliss_pauli_norm.py
unitary_preparation/: generalized_fermionic_generator.py
utils/: 1-norm.py  __init__.py  basic_utils.py  ferm_utils.py  frag_utils.py  linear_programming.py  math_utils.py  physicist_to_chemist.py
virial/: __init__.py  guide.md  hypervirial_relation.py
