[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_measurement_reduction"
dynamic = ["version"]
description = "A comprehensive package for quantum measurement reduction techniques"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Quantum Measurement Reduction Team", email = "quantum@example.com"}
]
maintainers = [
    {name = "Quantum Measurement Reduction Team", email = "quantum@example.com"}
]
keywords = ["quantum computing", "measurement reduction", "pauli operators", "variance reduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "attrs>=25.3.0",
    "autograd>=1.8.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "cirq-core>=1.5.0",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "deprecation>=2.1.0",
    "dill>=0.4.0",
    "duet>=0.2.9",
    "exceptiongroup>=1.3.0",
    "fonttools>=4.59.2",
    "h5py>=3.14.0",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "openfermion>=1.7.1",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "PubChemPy>=1.0.4",
    "Pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pyscf>=2.10.0",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "qiskit>=2.1.2",
    "qulacs>=0.6.12",
    "requests>=2.32.5",
    "rustworkx>=0.17.1",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "sortedcontainers>=2.4.0",
    "stevedore>=5.5.0",
    "sympy>=1.14.0",
    "tequila-basic @ git+https://github.com/tequilahub/tequila.git@ca6cfb70dc298a9b77e2017b4b3bc562d28975e3",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/yourusername/quantum_measurement_reduction"
Documentation = "https://quantum-measurement-reduction.readthedocs.io/"
Repository = "https://github.com/yourusername/quantum_measurement_reduction.git"
"Bug Tracker" = "https://github.com/yourusername/quantum_measurement_reduction/issues"

[tool.setuptools]
packages = ["ghost_pauli", "shared_pauli", "entities", "SymplecticVectorSpace", "utils", "tapering", "virial", "bliss"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.setuptools_scm]
write_to = "quantum_measurement_reduction/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
